--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,12 @@
                 <version>2.19.0</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.30</version>
+            </dependency>
+
         </dependencies>
 
     </dependencyManagement>
