--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>spring-01</module>
         <module>spring-02-ioc-xml</module>
+        <module>spring-03-ioc-annotation</module>
     </modules>
 
     <properties>
